lib/parser/test/corpus/expr
=================================
Associativity Check (Simple Binary)
=================================
5 + 2
---
(mel
 (expr
  (binary_expr
   (expr
    (literal
     (number_literal)
    )
   )
   (binary_infix_operator
    (math_operator
     (plus)
    )
   )
   (expr
    (literal
     (number_literal)
    )
   )
  )
 )
)
=================================
Associativity Check (Left to Right)
=================================
5 + 2 - 3
---
(mel
 (expr
  (binary_expr
   (expr
    (binary_expr
     (expr
      (literal
       (number_literal)
      )
     )
     (binary_infix_operator
      (math_operator
       (plus)
      )
     )
     (expr
      (literal
       (number_literal)
      )
     )
    )
   )
   (binary_infix_operator
    (math_operator
     (minus)
    )
   )
   (expr
    (literal
     (number_literal)
    )
   )
  )
 )
)
=================================
Associativity Check (Extra Grouping)
=================================
5 + 2 - 3 * 6
---
(mel
 (expr
  (binary_expr
   (expr
    (binary_expr
     (expr
      (binary_expr
       (expr
        (literal
         (number_literal)
        )
       )
       (binary_infix_operator
        (math_operator
         (plus)
        )
       )
       (expr
        (literal
         (number_literal)
        )
       )
      )
     )
     (binary_infix_operator
      (math_operator
       (minus)
      )
     )
     (expr
      (literal
       (number_literal)
      )
     )
    )
   )
   (binary_infix_operator
    (math_operator
    (mul)
    )
   )
   (expr
    (literal
     (number_literal)
    )
   )
  )
 )
)
=================================
Associativity Check (No Grouping)
=================================
5 + 2 - 3
---
(mel
 (expr
  (binary_expr
   (expr
    (binary_expr
     (expr
      (literal
       (number_literal)
      )
     )
     (binary_infix_operator
      (math_operator
       (plus)
      )
     )
     (expr
      (literal
       (number_literal)
      )
     )
    )
   )
   (binary_infix_operator
    (math_operator
     (minus)
    )
   )
   (expr
    (literal
     (number_literal)
    )
   )
  )
 )
)
=================================
Associativity Check (Grouping)
=================================
5 + ( 2 - 3 )
---
(mel
 (expr
  (binary_expr
   (expr
    (literal
     (number_literal)
    )
   )
   (binary_infix_operator
    (math_operator
     (plus)
    )
   )
   (expr
    (binary_expr
     (expr
      (literal
       (number_literal)
      )
     )
     (binary_infix_operator
      (math_operator
       (minus)
      )
     )
     (expr
      (literal
       (number_literal)
      )
     )
    )
   )
  )
 )
)
=================================
Unary Expression Check
=================================
true and ! false
---
(mel
 (expr
  (binary_expr
   (expr
    (literal
     (boolean_literal)
    )
   )
   (binary_infix_operator
    (logic_operator
     (and)
    )
   )
   (expr
    (prefix_expr
     (prefix_operator
      (bang)
     )
     (expr
      (literal
       (boolean_literal)
      )
     )
    )
   )
  )
 )
)
=================================
Math Check (Modulo)
=================================
5 % 2 - 3
---
(mel
 (expr
  (binary_expr
   (expr
    (binary_expr
     (expr
      (literal
       (number_literal)
      )
     )
     (binary_infix_operator
      (math_operator
       (modulo)
      )
     )
     (expr
      (literal
       (number_literal)
      )
     )
    )
   )
   (binary_infix_operator
    (math_operator
     (minus)
    )
   )
   (expr
    (literal
     (number_literal)
    )
   )
  )
 )
)
