lib/parser/test/corpus/function
=================================
Function Call 
=================================
simple()
---
(mel
 (expr
  (function_call_expr
   (identifier)
	 (argument_list)
  )
 )
)
=================================
Function Call (Name Starts With Underscore)
=================================
_start_with_underscore()
---
(mel
 (expr
  (function_call_expr
   (identifier)
   (argument_list)
	)
 )
)
=================================
Function Call (With Arguments)
=================================
simple(a, b, c)
---
(mel
 (expr
  (function_call_expr
   (identifier)
   (argument_list
    (arguments
     (arguments
      (arguments
       (expr
         (identifier)
        )
      )
      (expr
       (identifier)
      )
     )
     (expr
      (identifier)
     )
    )
   )
  )
 )
)
=================================
Function Call (Name Starts With Number)
=================================
1start_with_underscore()
---
(mel
 (expr
  (binary_expr
   (expr
    (literal
     (number_literal)
    )
   )
   (ERROR
    (UNEXPECTED 's')
   )
   (binary_infix_operator
    (logic_operator
     (or)
    )
   )
   (expr
    (function_call_expr
     (identifier)
     (argument_list)
    )
   )
  )
 )
)
